# SViewer

./: .gitignore  README.md  config.ini  index.html  main.py  pyproject.toml  requirements.txt  sam2.py
.github/workflows/: release.yml
app/: app.py  config.py
docs/: use.md
widgets/: CustomSlider.py  FileWidget.py  ImageView.py  MainWindow.py  PopDialog.py  SideBar.py
